# fuzzy_rocks

./: .gitignore  Cargo.toml  README.md  geonames_megacities.txt
benches/: inserts.rs  lookups.rs
misc/: perf_data.txt
src/: bincode_helpers.rs  database.rs  encode_decode.rs  key.rs  key_groups.rs  lib.rs  perf_counters.rs  records.rs  sym_spell.rs  table.rs  table_config.rs  unicode_string_helpers.rs
