[package]
name = "fuzzy_rocks"
version = "0.1.0"
authors = ["Luke Peterson <luke@infoplatter.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A persistent datastore backed by RocksDB with fuzzy key lookup using an arbitrary distance function accelerated by the SymSpell algorithm"
repository = "https://github.com/luketpeterson/fuzzy_rocks/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
derive_more = "0.99.14"
rocksdb = "0.16.0"
serde = { version = "1.0.126", features = ["derive"] }
bincode = "1.3.3"

[dev-dependencies]
csv = "1.1.6"
