[package]
name = "fuzzy_rocks"
version = "0.2.2"
authors = ["Luke Peterson <luke@infoplatter.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A persistent datastore backed by RocksDB with fuzzy key lookup using an arbitrary distance function accelerated by the SymSpell algorithm"
repository = "https://github.com/luketpeterson/fuzzy_rocks/"
readme = "README.md"
keywords = ["rocksdb", "fuzzy", "search", "fuzzy-search", "symspell"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
derive_more = "0.99.14"
rocksdb = "0.18.0"
serde = { version = "1.0.126", features = ["derive"] }
bincode = "1.3.3"

[dev-dependencies]
rand = "0.8.0"
rand_pcg = "0.3.1"
csv = "1.1.6"
criterion = "0.3"

[[bench]]
name = "lookups"
harness = false

[features]
#default = ["perf_counters"]
perf_counters = []

