[package]
name = "fuzzy_rocks"
version = "0.3.0"
authors = ["Luke Peterson <luke@infoplatter.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A persistent datastore backed by RocksDB with fuzzy key lookup using an arbitrary distance function accelerated by the SymSpell algorithm"
repository = "https://github.com/luketpeterson/fuzzy_rocks/"
readme = "README.md"
keywords = ["rocksdb", "fuzzy", "search", "fuzzy-search", "symspell"]

[dependencies]
num-traits = "0.2.14"
derive_more = "0.99.14"
rocksdb = ">=0.18.0, <=0.21.0"
serde = { version = "1.0.126", features = ["derive"] }

rmp-serde = { version = "1.1.2", optional = true }
rmp = { version = "0.8.12", optional = true }
bincode = { version = "1.3.3", optional = true }

[dev-dependencies]
rand = "0.8.0"
rand_pcg = "0.3.1"
csv = "1.1.6"
criterion = "0.3"

[[bench]]
name = "lookups"
harness = false

[features]
default = ["msgpack"]
perf_counters = []
msgpack = ["dep:rmp-serde", "dep:rmp"]
bincode = ["dep:bincode"]
